:lipstick: Fix layout on mobile

--- a/src/components/showcase/style.scss
+++ b/src/components/showcase/style.scss
@@ -13,8 +13,8 @@
 }
 
 .showcase {
-  width: 900px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 900px;
   min-height: 100%;
   margin: 0 auto;
   padding: 40px 16px 100px;
